--- a/force-app/main/default/lwc/accountList/accountList.css
+++ b/force-app/main/default/lwc/accountList/accountList.css
@@ -1,6 +1,3 @@
-.account-tile {
-	display: block;
-	border: 5px solid #8f98f9;
-	border-radius: .35rem;
-	background-color: #d2d8ed;
+.button {
+	color: #6bf78e;
 }
